--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,26 @@
-certifi==2025.4.26
-charset-normalizer==3.4.2
-docutils==0.21.2
-id==1.5.0
-idna==3.10
+certifi==2026.2.25
+charset-normalizer==3.4.4
+docutils==0.22.4
+id==1.6.1
+idna==3.11
 jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
-keyring==25.6.0
-markdown-it-py==3.0.0
+jaraco.context==6.1.0
+jaraco.functools==4.4.0
+keyring==25.7.0
+markdown-it-py==4.0.0
 mdurl==0.1.2
-more-itertools==10.7.0
-nh3==0.2.21
-packaging==25.0
-Pygments==2.19.1
+more-itertools==10.8.0
+nh3==0.3.3
+packaging==26.0
+Pygments==2.19.2
 pywin32-ctypes==0.2.3
 readme_renderer==44.0
-requests==2.32.3
+requests==2.32.5
 requests-toolbelt==1.0.0
 rfc3986==2.0.0
-rich==14.0.0
-setuptools==80.7.1
-twine==6.1.0
-urllib3==2.4.0
-wheel==0.45.1
+rich==14.3.3
+setuptools==82.0.0
+setuptools-scm==8.1.0
+twine==6.2.0
+urllib3==2.6.3
+wheel==0.46.3
